[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Vckyou <viicky.auliaz@gmail.com>"]
description = "Script for generating Telegram Session in telethon or pyrogram"
name = "userbot"
version = "0.1.0"
[tool.poetry.dependencies]
Pyrogram = "^1.2.9"
Telethon = "^1.21.1"
TgCrypto = "^1.2.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
